--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -1,5 +1,4 @@
-# include ./ui/cattpuccin_macchiato.conf
-include ./ui/tokyonight_moon.conf
+include ./ui/ghostty.conf
 include ./cursor.conf
 include ./font.conf
 include ./mouse.conf
@@ -29,6 +28,11 @@ map --when-focus-on var:IS_NVIM alt+j
 map --when-focus-on var:IS_NVIM alt+k
 map --when-focus-on var:IS_NVIM alt+h
 map --when-focus-on var:IS_NVIM alt+l
+
+enabled_layouts splits
+
+map cmd+d launch --cwd current --location vsplit
+map cmd+shift+d launch --cwd current --location hsplit
 
 # Path to a session file to use for all kitty instances.
 startup_session ./session.conf
