--- a/dot_config/aerospace/aerospace.toml
+++ b/dot_config/aerospace/aerospace.toml
@@ -286,3 +286,7 @@ run = 'layout floating'
 if.app-id = 'com.chabomakers.Antinote'
 run = 'layout floating'
 
+[[on-window-detected]]
+if.app-id = 'com.turbine.desktop'
+run = 'layout floating'
+
